--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -7,7 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= vite_stylesheet_tag 'main.scss' %>
+    <%= vite_stylesheet_tag 'public.scss' %>
     <%= vite_client_tag %>
     <%= vite_typescript_tag 'application' %>
     <%= vite_react_refresh_tag %>
