--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -1,8 +1,7 @@
-<h1 class="h1style mb-5rem fw-bold">お知らせ</h1>
-<div class="contents">
-
+<h1 class="h1style mb-5rem fw-bold">お知らせ!</h1>
+<div class="contents-wrap">
   <% @news.each do |news| %>
-    <div class="container-info">
+    <div class="content-info">
       <div class="date fw-bold"><%= format_date(news.calendar_date) %></div>
       <div class="title py-3"><%= link_to news.title, [news] %></div>
     </div>
