update/公開側の共有ファイルのスタイリングを変更

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -24,8 +24,10 @@
   </head>
   <body>
     <%= render 'public/shared/header' %>
-    <main class="main-top">
-      <%= yield %>
-    </main>
+    <div class="contents">
+      <main>
+        <%= yield %>
+      </main>
+    </div>
   </body>
 </html>
