--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header  fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light bg-white align-items-center">
     <div class="header-sm">
       <a class="navbar-brand navbar-brand-sm" href="#">LBrestaurant</a>
@@ -7,11 +7,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-
+    
     <div class="header-linklist collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">メニュー1</a>
+          <%= link_to "お知らせ", news_index_path , class: "nav-link" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">メニュー2</a>
