update/公開側のヘッダーのスタイリングを変更

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -157,14 +157,12 @@ a:hover {
 }
 
 
-.header .logo h1 {
+.logo {
   font-size: 28px;
   margin: 0;
-  padding: 10px 0;
   line-height: 1;
   font-weight: 400;
   letter-spacing: 1px;
-  text-transform: uppercase;
 }
 
 .scrolled-offset {
