--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -1,26 +1,31 @@
 <header class="header  fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light bg-white align-items-center">
     <div class="header-sm">
-      <a class="navbar-brand navbar-brand-sm" href="#">LBrestaurant</a>
+      <a class="navbar-brand navbar-brand-sm fw-bold logo" href="#">LBrestaurant</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-    
     <div class="header-linklist collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item active">
-          <%= link_to "お知らせ", news_index_path , class: "nav-link" %>
+        <li class="nav-item active ms-5">
+          <a class="nav-link fw-bold" href="#">独立応援システム</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">メニュー2</a>
+        <li class="nav-item ms-5">
+          <a class="nav-link fw-bold" href="#">企業情報</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">メニュー3</a>
+        <li class="nav-item ms-5">
+          <a class="nav-link fw-bold" href="#">店舗情報</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">メニュー4</a>
+        <li class="nav-item ms-5">
+          <%= link_to "お知らせ", news_index_path , class: "nav-link fw-bold" %>
+        </li>
+        <li class="nav-item ms-5">
+          <a class="nav-link fw-bold" href="#">ブログ</a>
+        </li>
+        <li class="nav-item ms-5">
+          <a class="nav-link fw-bold" href="#">採用情報</a>
         </li>
       </ul>
     </div>
