--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="header  fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light bg-white align-items-center">
     <div class="header-sm">
-      <a class="navbar-brand navbar-brand-sm fw-bold logo" href="#">LBrestaurant</a>
+      <%= link_to "LBrestaurant", root_path, class: "navbar-brand navbar-brand-sm fw-bold logo " %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
           <a class="nav-link fw-bold" href="#">店舗情報</a>
         </li>
         <li class="nav-item ms-5">
-          <%= link_to "お知らせ", news_index_path , class: "nav-link fw-bold" %>
+          <%= link_to "お知らせ", news_index_path , class: "nav-link fw-bold #{'active' if current_page?(news_index_path)}" %>
         </li>
         <li class="nav-item ms-5">
           <a class="nav-link fw-bold" href="#">ブログ</a>
