--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="header  fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light bg-white align-items-center">
     <div class="header-sm">
-      <%= link_to "LBrestaurant", root_path, class: "navbar-brand navbar-brand-sm fw-bold logo " %>
+      <%= link_to "LBrestaurant", root_path, class: "navbar-brand navbar-brand-sm fw-bold logo header-mobile-text" %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
