update/公開側のヘッダーでスマホサイズの際marginによりレイアウトが崩れていたので修正

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -231,6 +231,11 @@ a:hover {
   position: relative;
 }
 
+@media (max-width: 576px) {
+  .nav-item {
+    margin: 0 !important;
+  }
+}
 
 
 .navbar a i,
