--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -740,7 +740,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# お知らせ
+# news
 --------------------------------------------------------------*/
 .date {
   padding-top: 16px;
@@ -750,6 +750,20 @@ section {
 @media (max-width: 576px) {
   .date {
     font-size: 1rem;
+  }
+}
+
+.newsTitlebox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 2px solid #999;
+  border-bottom: 2px dotted #999;
+}
+
+@media screen and (max-width: 768px){
+  .newsTitlebox {
+    flex-wrap: wrap;
   }
 }
 
