--- a/app/views/public/news/show.html.erb
+++ b/app/views/public/news/show.html.erb
@@ -1,24 +1,10 @@
-
-<div class="card col-sm-9 mx-auto mt-5">
-  <div class="card-body p-3 p-sm-5">
-    <h2 class="text-center mb-4 fw-bold">お知らせ詳細</h2>
-    <div class="text-center mb-4">
-      <h5><%= @news.calendar_date %></h5>
-      <small class="text-muted">
-        <%= "公開日時: " + format_datetime(@news.start_at) %><br>
-        <%= "公開終了日時: " + format_datetime(@news.end_at) %>
-      </small>
-    </div>
-    <h4 class="card-title"><%= @news.title %></h4>
-    <div class="mt-4">
-      <p><%=safe_join(@news.body.split("\n"),tag(:br))%></p>
-    </div>
-    <div class="mt-4">
-      <%= link_to "一覧に戻る", @news_index_url, class: 'btn btn-secondary' %>
-    </div>
-  </div>
-</div>
-
+<h1 class="h1style mb-5rem fw-bold">お知らせ!</h1>
 <div class="contents-wrap">
-
+  <div class="newsTitlebox">
+    <h1><%= @news.title %></h1>
+    <ul>
+      <li class="time"><%= format_date(@news.calendar_date) %></li>
+    </ul>
+  </div>
+  <p><%=safe_join(@news.body.split("\n"),tag(:br))%></p>
 </div>
