--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -771,12 +771,20 @@ section {
   align-items: center;
   border-top: 2px solid #999;
   border-bottom: 2px dotted #999;
+  padding: 0 12px;
 }
 
 @media screen and (max-width: 768px){
   .newsTitlebox {
     flex-wrap: wrap;
   }
+}
+
+.newsTitlebox h1 {
+  font-size: 32px;
+  line-height: 1.25;
+  padding: 20px 0;
+  font-weight: bold;
 }
 
 .services .icon i {
