update/公開画面のお知らせ詳細画面のbodyボックスのスタイリングを変更し、margin-topのスタイリングを作成

--- a/app/views/public/news/show.html.erb
+++ b/app/views/public/news/show.html.erb
@@ -6,5 +6,8 @@
       <li class="time"><%= format_date(@news.calendar_date) %></li>
     </ul>
   </div>
-  <p><%=safe_join(@news.body.split("\n"),tag(:br))%></p>
+  <div class="newsBodybox">
+    <p><%=safe_join(@news.body.split("\n"),tag(:br))%></p>
+  </div>
 </div>
+
