--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -787,6 +787,10 @@ section {
   font-weight: bold;
 }
 
+.newsBodybox {
+  margin-top: 60px;
+}
+
 .services .icon i {
   color: #fff;
   font-size: 24px;
