--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -105,7 +105,7 @@ a:hover {
 }
 
 @media (max-width: 576px){
-  .content-wrap {
+  .contents-wrap {
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
@@ -785,6 +785,14 @@ section {
   line-height: 1.25;
   padding: 20px 0;
   font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .newsTitlebox h1 {
+    width: 100%;
+    font-size: 24px;
+    padding: 20px 0 0;
+  }
 }
 
 .newsBodybox {
