--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -16,6 +16,7 @@
   <table class="table table-hover">
     <thead class="table-dark">
       <tr>
+        <th>公開状態</th>
         <th>カテゴリー</th>
         <th>タイトル</th>
         <th>公開開始日時</th>
@@ -26,6 +27,7 @@
     <tbody>
       <% @articles.each do |article| %>
         <tr>
+          <td class="align-middle"><%= article.state_text %></td>
           <td class="align-middle"><%= article.category_text %></td>
           <td class="align-middle"><%= link_to article.title, [:admins, article], class: "text-primary" %></td>
           <td class="align-middle"><%= format_datetime(article.start_at) %></td>
