--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -15,6 +15,7 @@
   <table class="table table-hover">
     <thead class="table-dark">
       <tr>
+        <th>公開状態</th>
         <th>日付</th>
         <th>タイトル</th>
         <th>公開開始日時</th>
@@ -26,6 +27,7 @@
     <tbody>
       <% @news.each do |news| %>
         <tr>
+          <td class="align-middle"><%= news.state_text %></td>
           <td class="align-middle"><%= format_date(news.calendar_date) %></td>
           <td class="align-middle"><%= link_to news.title, [:admins, news], class: "text-primary" %></td>
           <td class="align-middle"><%= format_datetime(news.start_at) %></td>
