--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -3,6 +3,7 @@
   <h3 class="fw-bold"><%= link_to 'お知らせ一覧', admins_news_index_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_news_index_path, class: 'form-inline' do |f| %>
     <div class="input-group">
+      <%= f.select :search_by_state, News.state.options, { include_blank: '全ての公開状態' }, class: 'form-select-sm me-4' %>
       <%= f.search_field @search_scope, class: 'form-control', placeholder: 'タイトルや内容で検索' %>
       <div class="input-group-append">
         <%= f.submit '検索', class: 'btn btn-primary' %>
