--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -3,7 +3,7 @@
   <h3 class="fw-bold"><%= link_to 'ブログ一覧', admins_articles_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_articles_path, class: 'form-inline' do |f| %>
     <div class="input-group">
-      <%= f.select :search_by_state, Article.state.options, { include_blank: '全ての状態' }, class: 'form-select-sm me-4' %>
+      <%= f.select :search_by_status, Article.status.options, { include_blank: '全ての状態' }, class: 'form-select-sm me-4' %>
       <%= f.select :search_by_category, Article.category.options, { include_blank: '全てのカテゴリー' }, class: 'form-select-sm me-4' %>
       <%= f.search_field :title_cont, class: 'form-control', placeholder: 'タイトルで検索' %>
       <div class="input-group-append">
@@ -28,7 +28,7 @@
     <tbody>
       <% @articles.each do |article| %>
         <tr>
-          <td class="align-middle"><%= article.state_text %></td>
+          <td class="align-middle"><%= article.status_text %></td>
           <td class="align-middle"><%= article.category_text %></td>
           <td class="align-middle"><%= link_to article.title, [:admins, article], class: "text-primary" %></td>
           <td class="align-middle"><%= format_datetime(article.start_at) %></td>
