--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -22,7 +22,7 @@
           <%= link_to "お知らせ", news_index_path , class: "nav-link fw-bold #{'active' if current_page?(news_index_path)}" %>
         </li>
         <li class="nav-item ms-5">
-          <a class="nav-link fw-bold" href="#">ブログ</a>
+          <%= link_to "ブログ", articles_path , class: "nav-link fw-bold #{'active' if current_page?(articles_path)}" %>
         </li>
         <li class="nav-item ms-5">
           <a class="nav-link fw-bold" href="#">採用情報</a>
