update/helperを用いて、公開側のブログ一覧画面で、カテゴリーの色をそれぞれの属性により変更

--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -12,7 +12,7 @@
               <div class="article-info">
                 <div class="article-title"><%= article.title %></div>
                 <div class="article-category">
-                  <span>カテゴリー / <%= article.category_text %></span>
+                  カテゴリー / <span class="<%= category_text_color(article.category) %>"><%= article.category_text %></span>
                 </div>
               </div>
             <% end %>
