update/公開側のブログ一覧画面をboostrapやcssなどを用いて作成

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -867,9 +867,14 @@ section {
   min-height: 112px;
 }
 
+@media (max-width: 576px) {
+  .article-info {
+    padding: 12px 16px;
+  }
+}
+
 .article-title {
   font-size: 18px;
-  
 }
 
 .article-category {
