update/公開画面のブログ一覧画面でだけ表示する、デフォルト画像を登録。cssによりデバイスによってサイズを変更できるように調節

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -861,6 +861,17 @@ section {
   background-color: transparent;
 }
 
+.default-article-image {
+  width: 542px;
+  height: 242px;
+}
+
+@media screen and (max-width: 576px){
+  .default-article-image {
+    width: 242px;
+    height: 150px;
+  }
+}
 
 .article-info {
   padding: 20px 22px;
