--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -100,8 +100,9 @@ a:hover {
   max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  padding: 50px;
+  padding: 50px 80px;
   background-color: #fff ;
+  color: #4c4c4c;
 }
 
 @media (max-width: 576px){
@@ -799,41 +800,6 @@ section {
   margin-top: 60px;
 }
 
-.services .icon i {
-  color: #fff;
-  font-size: 24px;
-  line-height: 0;
-}
-
-.services .title {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-  text-transform: uppercase;
-}
-
-.services .title a {
-  color: #343a40;
-}
-
-.services .icon-box:hover .icon {
-  background: #fff;
-  border: 2px solid #f03c02;
-}
-
-.services .icon-box:hover .icon i {
-  color: #f03c02;
-}
-
-.services .icon-box:hover .title a {
-  color: #f03c02;
-}
-
-.services .description {
-  line-height: 24px;
-  font-size: 14px;
-}
-
 /*--------------------------------------------------------------
 # Artile
 --------------------------------------------------------------*/
@@ -862,14 +828,14 @@ section {
 }
 
 .default-article-image {
-  width: 542px;
-  height: 242px;
+  width: 494px;
+  height: 228px;
 }
 
 @media screen and (max-width: 576px){
   .default-article-image {
     width: 242px;
-    height: 150px;
+    height: 111px;
   }
 }
 
@@ -893,88 +859,46 @@ section {
   margin-top: 3rem;
 }
 
-.portfolio #portfolio-flters li:hover,
-.portfolio #portfolio-flters li.filter-active {
-  color: #fff;
-  background: #f03c02;
-}
-
-.portfolio #portfolio-flters li:last-child {
-  margin-right: 0;
-}
-
-.portfolio .portfolio-item {
-  margin-bottom: 30px;
-}
-
-.portfolio .portfolio-item .portfolio-info {
-  opacity: 0;
-  position: absolute;
-  left: 30px;
-  right: 30px;
-  bottom: 0;
-  z-index: 3;
-  transition: all ease-in-out 0.3s;
-  background: rgba(255, 255, 255, 0.9);
-  padding: 15px;
-}
-
-.portfolio .portfolio-item .portfolio-info h4 {
-  font-size: 18px;
-  color: #fff;
-  font-weight: 600;
-  color: #2b2320;
-}
-
-.portfolio .portfolio-item .portfolio-info p {
-  color: #65534c;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-
-.portfolio .portfolio-item .portfolio-info .preview-link,
-.portfolio .portfolio-item .portfolio-info .details-link {
-  position: absolute;
-  right: 40px;
-  font-size: 24px;
-  top: calc(50% - 18px);
-  color: #483b36;
-}
-
-.portfolio .portfolio-item .portfolio-info .preview-link:hover,
-.portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #f03c02;
-}
-
-.portfolio .portfolio-item .portfolio-info .details-link {
-  right: 10px;
-}
-
-.portfolio .portfolio-item .portfolio-links {
-  opacity: 0;
-  left: 0;
-  right: 0;
+.article-show-image {
+  margin: 8px 0px;
   text-align: center;
-  z-index: 3;
-  position: absolute;
-  transition: all ease-in-out 0.3s;
 }
 
-.portfolio .portfolio-item .portfolio-links a {
-  color: #fff;
-  margin: 0 2px;
-  font-size: 28px;
+.article-image img {
   display: inline-block;
-  transition: 0.3s;
 }
 
-.portfolio .portfolio-item .portfolio-links a:hover {
-  color: #fe825a;
+.articleTitlebox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 2px solid #999;
+  border-bottom: 2px dotted #999;
+  padding: 0 12px;
 }
 
-.portfolio .portfolio-item:hover .portfolio-info {
-  opacity: 1;
-  bottom: 20px;
+.articleTitlebox h1 {
+  font-size: 32px;
+  line-height: 1.25;
+  padding: 20px 0;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .articleTitlebox h1 {
+    width: 100%;
+    font-size: 24px;
+    padding: 20px 0 0;
+  }
+}
+
+.articleContentbox {
+  margin-top: 60px;
+}
+
+.articleContentbox p {
+  margin: 22px 0px;
+  font-size: 18px;
 }
 
 /*--------------------------------------------------------------
