--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -868,7 +868,7 @@ section {
   display: inline-block;
 }
 
-.articleTitlebox {
+.articleHeaderbox {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -877,7 +877,7 @@ section {
   padding: 0 12px;
 }
 
-.articleTitlebox h1 {
+.articleHeaderbox h1 {
   font-size: 32px;
   line-height: 1.25;
   padding: 20px 0;
@@ -885,7 +885,7 @@ section {
 }
 
 @media screen and (max-width: 768px) {
-  .articleTitlebox h1 {
+  .articleHeaderbox h1 {
     width: 100%;
     font-size: 24px;
     padding: 20px 0 0;
