--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -4,11 +4,11 @@
     <% @news.each do |news| %>
       <div class="content-info">
         <div class="date fw-bold"><%= format_date(news.calendar_date) %></div>
-        <div class="title py-3"><%= link_to news.title, [news] %></div>
+        <div class="py-3"><%= link_to news.title, [news] %></div>
       </div>
     <% end %>
   <% else %>
-    <div class="title py-3 text-center">
+    <div class="py-3 text-center">
       <h2>お知らせはありません!</h2>
     </div>
   <% end %>
