update/公開側のブログ詳細画面のレイアウトを変更して、paddingを利用してブログを表示する範囲を狭めた

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -804,6 +804,10 @@ section {
 # Artile
 --------------------------------------------------------------*/
 
+.article-wrap {
+  padding: 0 80px;
+}
+
 .article-card {
   border: solid 1px #cccccc;
 }
