--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -33,7 +33,7 @@
       <% end %>
     </div>
   <% else %>
-    <div class="title py-3 text-center">
+    <div class="py-3 text-center">
       <h2>
         ブログはまだありません<br>
         配信開始までお待ちください！
