--- a/app/frontend/entrypoints/admins.scss
+++ b/app/frontend/entrypoints/admins.scss
@@ -125,3 +125,105 @@
 .mb-5rem {
   margin-bottom: 5rem;
 }
+
+.article-wrap {
+  padding: 0 80px;
+}
+
+.article-card {
+  border: solid 1px #cccccc;
+}
+
+.article-image {
+  position: relative;
+  overflow: hidden;
+}
+
+.article-image:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(200, 200, 200, 0.3);
+  pointer-events: none;
+}
+
+.article-image:hover {
+  background-color: transparent;
+}
+
+.default-article-image {
+  width: 494px;
+  height: 228px;
+}
+
+@media screen and (max-width: 576px){
+  .default-article-image {
+    width: 242px;
+    height: 111px;
+  }
+}
+
+.article-info {
+  padding: 20px 22px;
+  min-height: 112px;
+}
+
+@media (max-width: 576px) {
+  .article-info {
+    padding: 12px 16px;
+  }
+}
+
+.article-title {
+  font-size: 18px;
+}
+
+.article-category {
+  font-size: 13px;
+  margin-top: 3rem;
+}
+
+.article-show-image {
+  margin: 8px 0px;
+  text-align: center;
+}
+
+.article-image img {
+  display: inline-block;
+}
+
+.articleHeaderbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 2px solid #999;
+  border-bottom: 2px dotted #999;
+  padding: 0 12px;
+}
+
+.articleHeaderbox h1 {
+  font-size: 32px;
+  line-height: 1.25;
+  padding: 20px 0;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .articleHeaderbox h1 {
+    width: 100%;
+    font-size: 24px;
+    padding: 20px 0 0;
+  }
+}
+
+.articleContentbox {
+  margin-top: 60px;
+}
+
+.articleContentbox p {
+  margin: 22px 0px;
+  font-size: 18px;
+}
