--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -22,7 +22,7 @@
         <th>公開開始日時</th>
         <th>公開終了日時</th>
         <th>内容</th>
-        <th colspan="2"></th>
+        <th colspan="2"><%= link_to '公開画面へのリンク', news_index_path, target: "_blank" %></th>
       </tr>
     </thead>
     <tbody>
