update/公開側のブログ画面のカテゴリーごとに文字色を変化させる方法をhelperで作成していたのを直接html.erbでcssのクラスを指定するように変更

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -864,6 +864,22 @@ section {
   margin-top: 3rem;
 }
 
+.event-category {
+  color: red;
+}
+
+.company-trip-category {
+  color: blue;
+}
+
+.staff-introduction-category {
+  color: green;
+}
+
+.other-category {
+  color: orange;
+}
+
 .article-show-image {
   margin: 8px 0px;
   text-align: center;
