update/公開側のブログ画面のカテゴリーごとに文字色を変化させる方法をcontrollerとcssで作成していたのを直接html.erbでcssのクラスを指定するように変更

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -868,11 +868,11 @@ section {
   color: red;
 }
 
-.company-trip-category {
+.company_trip-category {
   color: blue;
 }
 
-.staff-introduction-category {
+.staff_introduction-category {
   color: green;
 }
 
