--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -4,7 +4,7 @@
     <div class="articleHeaderbox">
       <h1><%= @article.title %></h1>
       <ul>
-        <li class="time">カテゴリー / <span class="<%= @category_css_class %>"><%= @article.category_text %></span></li>
+        <li class="time">カテゴリー / <span class="<%= @article.category %>-category"><%= @article.category_text %></span></li>
       </ul>
     </div>
     <div class="articleContentbox">
