--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -1,5 +1,5 @@
 <h1 class="h1style mb-5rem fw-bold">お知らせ!</h1>
-<div class="contents-wrap">
+<div class="wrap">
   <% if @news.present? %>
     <% @news.each do |news| %>
       <div class="content-info">
