--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -30,6 +30,32 @@ a:hover {
   text-decoration: none;
 }
 
+.btn-toggle {
+  padding: .25rem .5rem;
+  font-weight: 600;
+  color: var(--bs-emphasis-color);
+  background-color: transparent;
+}
+.btn-toggle:hover,
+.btn-toggle:focus {
+  color: #fd5c28;
+}
+
+.btn-toggle::before {
+  width: 1.25em;
+  line-height: 0;
+  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='black' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+  transition: transform 0.35s ease;
+  transform-origin: 0.5em 50%;
+}
+
+.btn-toggle[aria-expanded="true"] {
+  color: rgba(var(--bs-emphasis-color-rgb), .85);
+}
+.btn-toggle[aria-expanded="true"]::before {
+  transform: rotate(90deg);
+}
+
 .back-to-top {
   position: fixed;
   visibility: hidden;
@@ -923,68 +949,66 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Portfolio Details
+# Shop
 --------------------------------------------------------------*/
-.portfolio-details {
-  padding-top: 40px;
+.shops-wrap {
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 12px 24px;
+  background-color: #fff ;
+  color: #4c4c4c;
+  border-bottom: 1px solid #999;
 }
 
-.portfolio-details .portfolio-details-slider img {
+@media (max-width: 576px){
+  .shops-wrap {
+    width: 100%;
+    padding: 0;
+  }
+}
+
+.shop-card {
+  padding: 16px;
   width: 100%;
+  background-color: #f5f5f5;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
+.shop-content {
+  padding: 36px;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #f03c02;
+.shop-info {
+  padding: 1rem 1rem 1rem 5rem;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #f03c02;
+.shop-info dt {
+  font-weight: bold;
+  vertical-align: top;
 }
 
-.portfolio-details .portfolio-info {
-  padding: 30px;
-  box-shadow: 0px 0 30px rgba(43, 35, 32, 0.08);
+.shop-info dd {
+  margin-bottom: 1em;
 }
 
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #eee;
+@media (min-width: 480px){
+  .shop-info dt {
+    display: inline-block;
+    width: 30%;
+  }
 }
 
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
+@media (min-width: 480px){
+  .shop-info dd {
+    display: inline-block;
+    width: 65%;
+    margin-left: 15px;
+  }
 }
 
-.portfolio-details .portfolio-info ul li+li {
-  margin-top: 10px;
-}
-
-.portfolio-details .portfolio-description {
-  padding-top: 30px;
-}
-
-.portfolio-details .portfolio-description h2 {
-  font-size: 26px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
-.portfolio-details .portfolio-description p {
-  padding: 0;
+.shop-title {
+  flex: 1 1 auto;
+  font-size: 18px;
 }
 
 /*--------------------------------------------------------------
