--- a/app/views/public/shops/index.html.erb
+++ b/app/views/public/shops/index.html.erb
@@ -1,26 +1,40 @@
 <h1 class="h1style mb-5rem fw-bold">店舗一覧</h1>
 <div class="shops-wrap">
   <% @shops.each do |shop| %> 
-    <div class="py-3 text-center"><%= shop.name %></div>
-    <div class="shop-card">
-      <div class="shop-content">
-        <div class="d-flex flex-wrap">
-          <div class="col-md-6 mb-4 p-3">
-            <% if shop.shop_image? %>
-              <%= image_tag shop.shop_image.url, class: "img-fluid" %>
-            <% else %>
-              <%= image_tag '/assets/default_shop_image.png', alt: '店舗画像', class: "img-fluid" %>
-            <% end %>
-          </div>
-          <div class="col-md-6 mb-4 p-3">
-            <div class="p-3">
-              <p>住所 <%= shop.address %><%= shop.prefecture.name %><%= shop.city_name %></p>
-              <p>営業時間 <%= shop.business_time %></p>
-              <p>アクセス <%= shop.access %></p>
-              <p>電話番号 <%= shop.phone_number %></p>
-              <p>カウンター席数 <%= shop.counter_seat %>席</p>
-              <p>テーブル席数 <%= shop.table_seat %>席</p>
-              <p>グルメサイト <%= link_to shop.site_name, shop.gourmet_site_link, target: "_blank", rel: "noopener noreferrer" %></p>
+    <div class="py-3 d-flex align-items-center">
+      <div class="text-center shop-title">
+        <%= shop.name %>
+      </div>
+      <button class="btn btn-toggle d-inline-flex align-items-center" data-bs-toggle="collapse" data-bs-target="#shopDetails<%= shop.id %>" aria-expanded="false">
+        詳しく見る
+      </button>
+
+    </div>
+    <div id="shopDetails<%= shop.id %>" class="collapse">
+      <div class="shop-card">
+        <div class="shop-content">
+          <div class="d-flex flex-wrap">
+            <div class="col-md-6 mb-4 p-3">
+              <% if shop.shop_image? %>
+                <%= image_tag shop.shop_image.url, class: "img-fluid" %>
+              <% else %>
+                <%= image_tag '/assets/default_shop_image.png', alt: '店舗画像', class: "img-fluid" %>
+              <% end %>
+            </div>
+            <div class="col-md-6 mb-4 p-3">
+              <dl class="shop-info">
+                <dt>住所</dt>
+                <dd>
+                  〒<%= shop.postcode %><br>
+                  <%= shop.address %><%= shop.prefecture.name %><%= shop.city_name %>
+                </dd>
+                <dt>営業時間</dt><dd><%= shop.business_time %></dd>
+                <dt>アクセス</dt><dd><%= shop.access %></dd>
+                <dt>電話番号</dt><dd class="text-decoration-underline"><%= shop.phone_number %></dd>
+                <dt>カウンター席数</dt><dd><%= shop.counter_seat %>席</dd>
+                <dt>テーブル席数</dt><dd><%= shop.table_seat %>席</dd>
+                <dt>グルメサイト</dt><dd class="text-decoration-underline"><%= link_to shop.site_name, shop.gourmet_site_link, target: "_blank", rel: "noopener noreferrer" %></dd>
+              </dl>
             </div>
           </div>
         </div>
