update/公開側のarticleモデルのcontents-wrapクラスをwrapクラスに変更

--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -1,5 +1,5 @@
 <h1 class="h1style mb-5rem fw-bold">楽しいブログを更新中!</h1>
-<div class="contents-wrap">
+<div class="wrap">
   <% if @articles.present? %>
     <div class="row  m-0">
       <% @articles.each do |article| %>
