--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -1,5 +1,5 @@
 <h1 class="h1style mb-5rem fw-bold">楽しいブログを更新中!</h1>
-<div class="contents-wrap">
+<div class="wrap">
   <div class="article-wrap">
     <div class="articleHeaderbox">
       <h1><%= @article.title %></h1>
