--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -781,9 +781,17 @@ section {
 /*--------------------------------------------------------------
 # News
 --------------------------------------------------------------*/
+.news-content {
+  border-bottom: 1px solid #999;
+}
+
 .news-date {
   padding-top: 16px;
   font-size: 1.25rem;
+}
+
+.news-title {
+  font-size: 18px;
 }
 
 @media (max-width: 576px) {
@@ -974,12 +982,16 @@ section {
   background-color: #f5f5f5;
 }
 
-.shop-content {
-  padding: 36px;
+@media (min-width: 480px){
+  .shop-content {
+    padding: 36px;
+  }
 }
 
-.shop-info {
-  padding: 1rem 1rem 1rem 5rem;
+@media (min-width: 480px){
+  .shop-info {
+    padding: 1rem 1rem 1rem 5rem;
+  }
 }
 
 .shop-info dt {
@@ -1009,6 +1021,12 @@ section {
 .shop-title {
   flex: 1 1 auto;
   font-size: 18px;
+}
+
+@media (max-width: 576px){
+  .shop-title {
+    font-size: 14px;
+  }
 }
 
 /*--------------------------------------------------------------
