--- a/app/frontend/entrypoints/admins.scss
+++ b/app/frontend/entrypoints/admins.scss
@@ -272,3 +272,38 @@
   margin: 22px 0px;
   font-size: 18px;
 }
+
+.shop-info dt {
+  font-weight: bold;
+  vertical-align: top;
+}
+
+.shop-info dd {
+  margin-bottom: 1em;
+}
+
+@media (min-width: 480px){
+  .shop-info dt {
+    display: inline-block;
+    width: 30%;
+  }
+}
+
+@media (min-width: 480px){
+  .shop-info dd {
+    display: inline-block;
+    width: 65%;
+    margin-left: 15px;
+  }
+}
+
+.shop-title {
+  flex: 1 1 auto;
+  font-size: 18px;
+}
+
+@media (max-width: 576px){
+  .shop-title {
+    font-size: 14px;
+  }
+}
