--- a/app/views/public/news/show.html.erb
+++ b/app/views/public/news/show.html.erb
@@ -3,7 +3,7 @@
   <div class="newsHeaderbox">
     <h1><%= @news.title %></h1>
     <ul>
-      <li class="time"><%= format_date(@news.calendar_date) %></li>
+      <li class="news-show-date"><%= format_date(@news.calendar_date) %></li>
     </ul>
   </div>
   <div class="newsContentbox">
