--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -3,7 +3,7 @@
   <% if @news.present? %>
     <% @news.each do |news| %>
       <div class="news-content">
-        <div class="date fw-bold"><%= format_date(news.calendar_date) %></div>
+        <div class="news-date fw-bold"><%= format_date(news.calendar_date) %></div>
         <div class="py-3 fw-bold news-title"><%= link_to news.title, [news] %></div>
       </div>
     <% end %>
