--- a/app/frontend/entrypoints/admins.scss
+++ b/app/frontend/entrypoints/admins.scss
@@ -60,6 +60,15 @@
   background-color: var(--bs-tertiary-bg);
 }
 
+@media (max-width: 576px) {
+  .btn-sm, .btn-group-sm > .btn {
+    --bs-btn-padding-y: 0.25rem;
+    --bs-btn-padding-x: 0.5rem;
+    --bs-btn-font-size: 0.5rem;
+    --bs-btn-border-radius: var(--bs-border-radius-sm);
+  }
+}
+
 .sidebar {
   position: fixed;
   top: 0;
